--- a/src/001_display_property/index.html
+++ b/src/001_display_property/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Display property</title>
+    <title>Display_property</title>
   </head>
   <body>
     <div class="container">Grid container #1</div>
