--- a/src/003-grid_gaps/index.html
+++ b/src/003-grid_gaps/index.html
@@ -10,6 +10,8 @@
   <body>
     <div class="container">
       <div class="grid-item">1</div>
+      <div class="grid-item">2</div>
+      <div class="grid-item">3</div>
     </div>
   </body>
 </html>
