--- a/src/003-grid_gaps/index.html
+++ b/src/003-grid_gaps/index.html
@@ -17,6 +17,8 @@
       <div class="grid-item">6</div>
       <div class="grid-item">7</div>
       <div class="grid-item">8</div>
+      <div class="grid-item">9</div>
+      <div class="grid-item">10</div>
     </div>
   </body>
 </html>
